--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "wavesurfer.js": "^7.8.1",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
